# centaur-metrics

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  combine_projects.py  docker-compose.yaml  get_metrics.sh  get_metrics_new.sh  merge_csvs.py  metrics.py  metrics_unified.py  pyproject.toml  update_projects.sh
app/: main.py
app/pages/: 0_Fetch_Projects.py  1_Run_Metrics.py  2_Merge_CSVs.py  3_Combine_Projects.py  4_View_Results.py  5_GT_Quality.py  6_Reviewer_Config.py  7_Reviewer_Quality.py
app/utils/: __init__.py  logging.py
cli/: __init__.py  get_project.py
cli/utils/: annotation_model.py  valid_tickers.py
src/: __init__.py
src/agreement/: __init__.py  base.py  matching.py  overall.py  per_field.py  per_label.py  unified.py
src/cli/: metrics.py
src/io/: __init__.py  csv_utils.py  loader.py  paths.py  writer.py
src/metrics/: __init__.py  pairwise.py  pipeline.py  reviewer_quality.py  unified_pairwise.py  unified_pipeline.py
src/models/: __init__.py  constants.py  trade.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py
tests/unit/test_agreement/: __init__.py  test_matching.py  test_overall.py  test_per_field.py  test_per_label.py  test_unified.py
tests/unit/test_io/: __init__.py  test_csv_utils.py  test_loader.py
tests/unit/test_metrics/: __init__.py  test_pairwise.py  test_pipeline.py  test_reviewer_quality.py  test_unified_pairwise.py  test_unified_pipeline.py
tests/unit/test_models/: __init__.py  test_constants.py  test_trade.py
