[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project]
name = "human-signal-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "krippendorff>=0.8.1",
    "label-studio-sdk>=2.0.11",
    "matplotlib>=3.10.8",
    "polars>=1.34.0",
    "pydantic==2.12",
    "python-dotenv>=1.1.1",
    "statsmodels>=0.14.5",
    "streamlit>=1.52.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
